# llvm-swar

./: .gitignore  CMakeLists.txt  README.md  SWARPass.cpp  TestPass.cpp  add4i3.ll  add6i12.ll  add6i3.ll  add6i3_s.ll  add8i4.ll  add8i4_p.ll  add8i4_p.s  bitScanTest.cpp  ctlz6i12.ll  ctpop6i12.ll  cttz6i12.ll  intrinsics_test.cpp  mul6i12.ll  rem16i8.ll  rem6i12.ll  shuffle.ll  sub4i3.ll  testDriver.py  trunc6i12.ll  trunc6i8.ll
include/: SWARPass.h
lib/: SWARBinary.cpp  SWARHorizontal.cpp  SWARPass.cpp
test_cases/: add6i12.ll  add8i4_p.ll  ctpop6i8.ll  div16i8.ll  div6i12.ll  mul16i8.ll
test_cases/add/: add10i10.ll  add16i8.ll  add32i4.ll  add32i4.s  add5i5.ll  add64i2.ll  add64i2.s  swar_add10i10.ll  swar_add16i8  swar_add16i8.ll  swar_add16i8.s  swar_add32i4.ll  swar_add32i4.s  swar_add5i5.ll  swar_add64i2.ll  swar_add64i2.s
test_cases/ctlz/: ctlz10i10.ll  ctlz16i8.ll  ctlz32i4.ll  ctlz5i5.ll  ctlz64i2.ll  swar_ctlz10i10.ll  swar_ctlz16i8.ll  swar_ctlz32i4.ll  swar_ctlz5i5.ll  swar_ctlz64i2.ll
test_cases/ctpop/: ctpop10i10.ll  ctpop16i8.ll  ctpop32i4.ll  ctpop5i5.ll  ctpop64i2.ll  swar_ctpop10i10.ll  swar_ctpop16i8.ll  swar_ctpop32i4.ll  swar_ctpop5i5.ll  swar_ctpop64i2.ll
test_cases/cttz/: cttz16i8.ll  cttz32i4.ll  cttz5i5.ll  cttz64i2.ll  swar_cttz10i10.ll  swar_cttz16i8.ll  swar_cttz32i4.ll  swar_cttz5i5.ll  swar_cttz64i2.ll
test_cases/div/: div10i10.ll  div16i8.ll  div16i8.s  div32i4.ll  div32i4.s  div5i5.ll  div64i2.ll  div64i2.s  swar_div10i10.ll  swar_div16i8.ll  swar_div16i8.s  swar_div32i4.ll  swar_div5i5.ll  swar_div64i2.ll
test_cases/mul/: mul10i10.ll  mul16i8.ll  mul16i8.s  mul32i4.ll  mul32i4.s  mul5i5.ll  mul64i2.ll  mul64i2.s  swar_mul10i10.ll  swar_mul16i8.ll  swar_mul16i8.s  swar_mul32i4.ll  swar_mul5i5.ll  swar_mul64i2.ll
test_cases/rem/: rem10i10.ll  rem16i8.ll  rem16i8.s  rem32i4.ll  rem5i5.ll  rem64i2.ll  swar_rem10i10.ll  swar_rem16i8.ll  swar_rem16i8.s  swar_rem32i4.ll  swar_rem32i4.s  swar_rem5i5.ll  swar_rem64i2.ll  swar_rem64i2.s
test_cases/sub/: sub10i10.ll  sub16i8.ll  sub16i8.s  sub32i4.ll  sub32i4.s  sub5i5.ll  sub64i2.ll  sub64i2.s  swar_sub10i10.ll  (+6 more)
